<resources>
    <string name="app_name">navFilms</string>
    <string name="tfPeli">Nombre</string>
    <string name="buscarPelis">Buscar</string>
    <string name="buscar_pelicula_titulo">Buscar Pelicula</string>
    <string name="series">Series</string>
    <string name="peliculas">Peliculas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">"movie"</string>
    <string name="all">all</string>
    <string name="tv">"tv"</string>
    <string name="titulo">Titulo</string>
    <string name="pathImage">"https://image.tmdb.org/t/p/original/"</string>
    <string name="cargando">Loading...!!</string>
    <string name="buscador">Buscador</string>
    <string name="tvFecha">Fecha</string>
    <string name="tvDescripcion">Descripcion</string>
    <string name="tvTitulo">Titulo</string>
    <string name="tvFecha_de_emision">Fecha de Emision:</string>
    <string name="tvNombre">Nombre</string>
    <string name="biografia">Biografia</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="favoritos">Favoritos</string>
    <string name="db">multimedia_database</string>
    <string name="seriesFavoritas">Series Favoritas</string>
    <string name="movieFav">Peliculas Favoritas</string>
    <string name="visto">visto</string>
</resources>